--- a/Web APP/STUDENTDEMOsd/Views/Student/Edit.cshtml
+++ b/Web APP/STUDENTDEMOsd/Views/Student/Edit.cshtml
@@ -31,7 +31,7 @@
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <input asp-for="MotherName" class="form-control" />
-                <select id="Gender" name="Gender" asp-for="Gender" class="form-control">
+                <select id="Gender" name="Gender" value = "Gender" asp-for="Gender" class="form-control">
                     <option value="">Select Gender</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
