--- a/Web API/CrudAppUsingASPCoreWebAPI/CrudAppUsingASPCoreWebAPI/Views/Student/Create.cshtml
+++ b/Web API/CrudAppUsingASPCoreWebAPI/CrudAppUsingASPCoreWebAPI/Views/Student/Create.cshtml
@@ -13,25 +13,25 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control noNumbersInput" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             </br>
             <div class="form-group">
                 <label asp-for="FatherName" class="control-label"></label>
-                <input asp-for="FatherName" class="form-control" />
+                <input asp-for="FatherName" class="form-control noNumbersInput" />
                 <span asp-validation-for="FatherName" class="text-danger"></span>
             </div>
             </br>
             <div class="form-group">
                 <label asp-for="MotherName" class="control-label"></label>
-                <input asp-for="MotherName" class="form-control" />
+                <input asp-for="MotherName" class="form-control noNumbersInput" />
                 <span asp-validation-for="MotherName" class="text-danger"></span>
             </div>
             </br>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select id="Gender" value="Gender" name="Gender" class="form-control">
+                <select id="Gender" name="Gender" asp-for="Gender" class="form-control" data-val="true" data-val-required="Please Select a Gender.">
                     <option value="">Select Gender</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
