--- a/Web API/CrudAppUsingASPCoreWebAPI/CrudAppUsingASPCoreWebAPI/Views/Student/Edit.cshtml
+++ b/Web API/CrudAppUsingASPCoreWebAPI/CrudAppUsingASPCoreWebAPI/Views/Student/Edit.cshtml
@@ -19,23 +19,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control noNumbersInput" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FatherName" class="control-label"></label>
-                <input asp-for="FatherName" class="form-control" />
+                <input asp-for="FatherName" class="form-control noNumbersInput" />
                 <span asp-validation-for="FatherName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MotherName" class="control-label"></label>
-                <input asp-for="MotherName" class="form-control" />
+                <input asp-for="MotherName" class="form-control noNumbersInput" />
                 <span asp-validation-for="MotherName" class="text-danger"></span>
             </div>
         
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="MotherName" class="form-control" />
                 <select id="Gender" name="Gender" asp-for="Gender" class="form-control">
                     <option value="">Select Gender</option>
                     <option value="Male">Male</option>
