--- a/Web APP/STUDENTDEMOsd/Views/Student/Create.cshtml
+++ b/Web APP/STUDENTDEMOsd/Views/Student/Create.cshtml
@@ -19,34 +19,50 @@
             </div> *@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control noNumbersInput" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            </br>
             <div class="form-group">
                 <label asp-for="FatherName" class="control-label"></label>
-                <input asp-for="FatherName" class="form-control" />
+                <input asp-for="FatherName" class="form-control noNumbersInput" />
                 <span asp-validation-for="FatherName" class="text-danger"></span>
             </div>
+            </br>
             <div class="form-group">
                 <label asp-for="MotherName" class="control-label"></label>
-                <input asp-for="MotherName" class="form-control" />
+                <input asp-for="MotherName" class="form-control noNumbersInput" />
                 <span asp-validation-for="MotherName" class="text-danger"></span>
             </div>
+            </br>
            @*  <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <input asp-for="Gender" class="form-control" />
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div> *@
-
+@* 
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <select id="Gender" name="Gender" asp-for="Gender" class="form-control">
                     <option value="Gender" id="Gender">Select Gender</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
+                <span asp-validation-for="Gender" class="text-danger"></span>
+                </select>
+                <span asp-validation-for="Gender" class="text-danger"></span>
+            </div> *@
+
+            <div class="form-group">
+                <label asp-for="Gender" class="control-label"></label>
+                <select id="Gender" name="Gender" asp-for="Gender" class="form-control" data-val="true" data-val-required="Please Select a Gender." style="border-">
+                    <option value="">Select Gender</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
                 </select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
+            </br>
+
 
 
             <div class="form-group">
@@ -54,11 +70,13 @@
                 <input asp-for="DOB" class="form-control" />
                 <span asp-validation-for="DOB" class="text-danger"></span>
             </div>
+            </br>
             <div class="form-group">
                 <label asp-for="AadharNo" class="control-label"></label>
                 <input asp-for="AadharNo" class="form-control" />
                 <span asp-validation-for="AadharNo" class="text-danger"></span>
             </div>
+            </br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-success" />
             </div>
@@ -67,6 +85,7 @@
 </div>
 
 <div>
+    </br>
     <a asp-action="Home" class="btn btn-info">Back to List</a>
 </div>
 
